--- a/tools/docgen/dex-pokemon-by-type.html
+++ b/tools/docgen/dex-pokemon-by-type.html
@@ -23,62 +23,11 @@
         <img src="../../salt-crystal-transparent.png">
         <a href="../../index.html">Pokémon SAlt Crystal</a>
       </h3>
-      <p class="text-center">Index of <strong>Water</strong>-type Pokémon.</p>
+      <p class="text-center">Index of <strong>{name}</strong>-type Pokémon.</p>
 
       <section>
         <h4>By Number</h4>
-        <ul>
-<li><a href="./007.html">007 - Squirtle</a></li>
-<li><a href="./008.html">008 - Wartortle</a></li>
-<li><a href="./009.html">009 - Blastoise</a></li>
-<li><a href="./054.html">054 - Psyduck</a></li>
-<li><a href="./055.html">055 - Golduck</a></li>
-<li><a href="./060.html">060 - Poliwag</a></li>
-<li><a href="./061.html">061 - Poliwhirl</a></li>
-<li><a href="./062.html">062 - Poliwrath</a></li>
-<li><a href="./072.html">072 - Tentacool</a></li>
-<li><a href="./073.html">073 - Tentacruel</a></li>
-<li><a href="./079.html">079 - Slowpoke</a></li>
-<li><a href="./080.html">080 - Slowbro</a></li>
-<li><a href="./086.html">086 - Seel</a></li>
-<li><a href="./087.html">087 - Dewgong</a></li>
-<li><a href="./090.html">090 - Shellder</a></li>
-<li><a href="./091.html">091 - Cloyster</a></li>
-<li><a href="./098.html">098 - Krabby</a></li>
-<li><a href="./099.html">099 - Kingler</a></li>
-<li><a href="./116.html">116 - Horsea</a></li>
-<li><a href="./117.html">117 - Seadra</a></li>
-<li><a href="./118.html">118 - Goldeen</a></li>
-<li><a href="./119.html">119 - Seaking</a></li>
-<li><a href="./120.html">120 - Staryu</a></li>
-<li><a href="./121.html">121 - Starmie</a></li>
-<li><a href="./129.html">129 - Magikarp</a></li>
-<li><a href="./130.html">130 - Gyarados</a></li>
-<li><a href="./131.html">131 - Lapras</a></li>
-<li><a href="./134.html">134 - Vaporeon</a></li>
-<li><a href="./138.html">138 - Omanyte</a></li>
-<li><a href="./139.html">139 - Omastar</a></li>
-<li><a href="./140.html">140 - Kabuto</a></li>
-<li><a href="./141.html">141 - Kabutops</a></li>
-<li><a href="./158.html">158 - Totodile</a></li>
-<li><a href="./159.html">159 - Croconaw</a></li>
-<li><a href="./160.html">160 - Feraligatr</a></li>
-<li><a href="./170.html">170 - Chinchou</a></li>
-<li><a href="./171.html">171 - Lanturn</a></li>
-<li><a href="./183.html">183 - Marill</a></li>
-<li><a href="./184.html">184 - Azumarill</a></li>
-<li><a href="./186.html">186 - Politoed</a></li>
-<li><a href="./194.html">194 - Wooper</a></li>
-<li><a href="./195.html">195 - Quagsire</a></li>
-<li><a href="./199.html">199 - Slowking</a></li>
-<li><a href="./211.html">211 - Qwilfish</a></li>
-<li><a href="./222.html">222 - Corsola</a></li>
-<li><a href="./223.html">223 - Remoraid</a></li>
-<li><a href="./224.html">224 - Octillery</a></li>
-<li><a href="./226.html">226 - Mantine</a></li>
-<li><a href="./230.html">230 - Kingdra</a></li>
-<li><a href="./245.html">245 - Suicune</a></li>
-</ul>
+        {species_list}
       </section>
 
       <footer class="footer">
